--- a/Listing.html
+++ b/Listing.html
@@ -14,13 +14,16 @@
   </head>
   <body>
    <nav id="navBar" class="navbar-white">
-      <img class="logo" src="assets/images/logo-red.png" alt="logo">
+      <a href="index.html">
+         <img class="logo" src="assets/images/logo-black.png" alt="logo">
+      </a>
+      
       <ul class="nav-links">
          <li><a href="#" class="active" >Popular Place</a></li>
-         <li><a href="#">Travel Outside</a></li>
+         <li><a href="">Travel Outside</a></li>
          <li><a href="#">Online Packages</a></li>
       </ul>
-      <a href="#" class="register-btn">Resister Now</a>
+      <a href="sign-up.html" class="register-btn">Resister Now</a>
       <i class="fa-solid fa-bars" onClick="togglebtn()" ></i>
    </nav>
 
@@ -28,21 +31,214 @@
       <div class="list-container">
          <div class="left-col">
             <p>200+ Options</p>
-            <h1>Recommended Place In San Francisco</h1>
+            <h1>Recommended Place</h1>
             <div class="house">
                <div class="house-img">
-                  <img src="assets/images/image-s1.png" alt="">
+                  <img src="assets/images/house-1 (1).jpeg" alt="">
                </div>
                <div class="house-info">
-                  <p>Private Villa in San Francisco</p>
-                  <h3>Deluxe Queen Room With Street View</h3>
-                  <p>1 Bedroom / 1 Bathroom / Wifi / Kitchen</p>
+                  <p>Lakeside Haven</p>
+                  <h3>Lakeside Haven with Reflective Waters View.</h3>
+                  <p>3 Bedroom / 3 Bathroom / Wifi / Kitchen</p>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star-half-stroke"></i>
+                  <i class="fa-regular fa-star"></i>
+                  <div class="house-price">
+                     <p>2 Guest</p>
+                     <h4>$ 100 <span> / Day</span> </h4>
+                  </div>
+               </div>
+            </div>
+          
+
+         <div class="house">
+            <div class="house-img">
+               <img src="assets/images/house-6 (3).jpeg" alt="">
+            </div>
+            <div class="house-info">
+               <p>Forest Whisper Chalet</p>
+               <h3>Forest Whisper Chalet with Verdant Canopy View.</h3>
+               <p>2 Bedroom / 3 Bathroom / Wifi / Kitchen</p>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star-half-stroke"></i>
+               <i class="fa-regular fa-star"></i>
+               <div class="house-price">
+                  <p>2 Guest</p>
+                  <h4>$ 100 <span> / Day</span> </h4>
                </div>
             </div>
          </div>
-         <div class="right-col"></div>
+         <div class="house">
+            <div class="house-img">
+               <img src="assets/images/house-7 (1).jpeg" alt="">
+            </div>
+            <div class="house-info">
+               <p>Desert Mirage House</p>
+               <h3>Desert Mirage House with Golden Sands View.</h3>
+               <p>2 Bedroom / 2 Bathroom / Wifi / Kitchen</p>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star-half-stroke"></i>
+               <i class="fa-regular fa-star"></i>
+               <div class="house-price">
+                  <p>2 Guest</p>
+                  <h4>$ 100 <span> / Day</span> </h4>
+               </div>
+            </div>
+         </div>
+         <div class="house">
+            <div class="house-img">
+               <img src="assets/images/house-2 (1).jpeg" alt="">
+            </div>
+            <div class="house-info">
+               <p>Savanna Serenity Villa</p>
+               <h3>Savanna Serenity Villa with Infinite Plains View.</h3>
+               <p>1 Bedroom / 1 Bathroom / Wifi / Kitchen</p>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star-half-stroke"></i>
+               <i class="fa-regular fa-star"></i>
+               <div class="house-price">
+                  <p>2 Guest</p>
+                  <h4>$ 100 <span> / Day</span> </h4>
+               </div>
+            </div>
+         </div>
+         <div class="house">
+            <div class="house-img">
+               <img src="assets/images/house-3 (1).jpeg" alt="">
+            </div>
+            <div class="house-info">
+               <p>Sunset Boulevard Mansion</p>
+               <h3>Sunset Boulevard Mansion with Horizon Glow View.</h3>
+               <p>5 Bedroom / 6 Bathroom / Wifi / Kitchen</p>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star-half-stroke"></i>
+               <i class="fa-regular fa-star"></i>
+               <div class="house-price">
+                  <p>5 Guest</p>
+                  <h4>$ 1000 <span> / Day</span> </h4>
+               </div>
+            </div>
+         </div>
+         <div class="house">
+            <div class="house-img">
+               <img src="assets/images/house-4 (1).jpeg" alt="">
+            </div>
+            <div class="house-info">
+               <p>Tropical Getaway Bungalow</p>
+               <h3>Tropical Getaway Bungalow with Coral Shoreline View</h3>
+               <p>4 Bedroom / 4 Bathroom / Wifi / Kitchen</p>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star-half-stroke"></i>
+               <i class="fa-regular fa-star"></i>
+               <div class="house-price">
+                  <p>2 Guest</p>
+                  <h4>$ 100 <span> / Day</span> </h4>
+               </div>
+            </div>
+         </div>
+
+         <div class="house">
+            <div class="house-img">
+               <img src="assets/images/house-5 (3).jpeg" alt="">
+            </div>
+            <div class="house-info">
+               <p>Golden Sands Villa</p>
+               <h3>Golden Sands Villa with Shifting Dunes View.</h3>
+               <p>3 Bedroom / 3 Bathroom / Wifi / Kitchen</p>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star-half-stroke"></i>
+               <i class="fa-regular fa-star"></i>
+               <div class="house-price">
+                  <p>2 Guest</p>
+                  <h4>$ 100 <span> / Day</span> </h4>
+               </div>
+            </div>
+         </div>
+
+
+
       </div>
 
+
+         <div class="right-col">
+            <div class="sidebar">
+               <h2>Select Filters</h2>
+               <h3>Property Type</h3>
+               <div class="filter">
+                  <input type="checkbox"> <p>House</p>
+                  <span>(0)</span>
+               </div>
+               <div class="filter">
+                  <input type="checkbox"> <p>Hostel</p>
+                  <span>(0)</span>
+               </div>
+               <div class="filter">
+                  <input type="checkbox"> <p>Flat</p>
+                  <span>(0)</span>
+               </div>
+               <div class="filter">
+                  <input type="checkbox"> <p>Villa</p>
+                  <span>(0)</span>
+               </div>
+               <div class="filter">
+                  <input type="checkbox"> <p>Guest Suite</p>
+                  <span>(0)</span>
+               </div>
+               <h3>Amenities</h3>
+               <div class="filter">
+                  <input type="checkbox"> <p>Air Conditioning</p>
+                  <span>(0)</span>
+               </div>
+               <div class="filter">
+                  <input type="checkbox"> <p>Wi-fi</p>
+                  <span>(0)</span>
+               </div>
+               <div class="filter">
+                  <input type="checkbox"> <p>GYM</p>
+                  <span>(0)</span>
+               </div>
+               <div class="filter">
+                  <input type="checkbox"> <p>Pool</p>
+                  <span>(0)</span>
+               </div>
+               <div class="filter">
+                  <input type="checkbox"> <p>Kitchen</p>
+                  <span>(0)</span>
+               </div>
+
+               <div class="sidebar-link">
+                  <a href="#">View More</a>
+               </div>
+
+         </div>
+      </div>
+   </div>
+
+   <div class="pageination">
+      <img src="assets/images/arrow.png" alt="">
+      <span class="current" >1</span>
+      <span>2</span>
+      <span>3</span>
+      <span>4</span>
+      <span>5</span>
+      <span>&middot; &middot; &middot; &middot; </span>
+      <span>20</span>
+      <img src="assets/images/arrow.png" class="right-arrow" alt="">
+   </div>
 
 
       <div class="footer">
