--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <body>
    <div class="header">
       <nav id="navBar">
-         <img class="logo" src="assets/images/logo.png" alt="logo">
+         <img class="logo" src="assets/images/logo1.png" alt="logo">
          <ul class="nav-links">
-            <li><a href="#" class="active" >Popular Place</a></li>
-            <li><a href="#">Travel Outside</a></li>
+            <li><a href="Listing.html" class="active" >Popular Place</a></li>
+            <li><a href="house.html">Travel Outside</a></li>
             <li><a href="#">Online Packages</a></li>
          </ul>
-         <a href="#" class="register-btn">Resister Now</a>
+         <a href="sign-up.html" class="register-btn">Resister Now</a>
          <i class="fa-solid fa-bars" onClick="togglebtn()" ></i>
       </nav>
       <div class="container">
@@ -133,23 +133,23 @@
          </div>
       </div>
 
-      <h2 class="sub-title ">Trending Places</h2>
+      <h2 class="sub-title" id="Recommended">Trending Places</h2>
       <div class="trending">
          <div>
-            <img src="assets/images/dubai.png" alt="">
+            <img src="assets/images/dubai.jpeg" alt="">
             <h3>Dubai</h3>
          </div>
          <div>
-            <img src="assets/images/new-york.png" alt="">
-            <h3>New York </h3>
+            <img src="assets/images/nairobi.jpeg" alt="">
+            <h3>Nairobi</h3>
          </div>
          <div>
-            <img src="assets/images/paris.png" alt="">
+            <img src="assets/images/paris.jpeg" alt="">
             <h3>Paris</h3>
          </div>
          <div>
-            <img src="assets/images/new-delhi.png" alt="">
-            <h3>New Delhi</h3>
+            <img src="assets/images/venice.jpeg" alt="">
+            <h3>Venice</h3>
          </div>
       </div>
 
@@ -163,19 +163,31 @@
       <h2 class="sub-title ">Travellers Stories</h2>
       <div class="stories">
          <div>
-            <img src="assets/images/story-1.png" alt="">
-            <p>Popular Kenyan  Counties with a budget of just $10,000</p>
+            <img src="assets/images/story-1 (1).jpeg" alt="">
+            <p>Make  your travel dreams come true</p>
+
          </div>
          <div>
-            <img src="assets/images/story-2.png" alt="">
-            <p>Popular Kenyan  Counties with a budget of just $10,000</p>
+            <img src="assets/images/story-1 (2).jpeg" alt="">
+            <p>Make your travel dreams come true</p>
+
          </div>
          <div>
-            <img src="assets/images/story-3.png" alt="">
-            <p>Popular Kenyan  Counties with a budget of just $10,000</p>
+            <img src="assets/images/story-1 (3).jpeg" alt="">
+            <p>Make your travel dreams come true</p>
+         </div>
+         <div>
+            <img src="assets/images/story-1 (4).jpeg" alt="">
+            <p>Make your travel dreams come true</p>
+         </div>
+         <div>
+            <img src="assets/images/story-1 (5).jpeg" alt="">
+            <p>Make your travel dreams come true</p>
          </div>
       </div>
-      <a href="#" class="start-btn" >Start making money</a>
+      <a href="#" class="start-btn" >Let's Make  Memories</a>
+
+
 
       <div class="about-msg">
          <h2>About TravelTide</h2>
@@ -192,7 +204,6 @@
              charm and international allure. 🌍✈️🦒📸
          </p>
       </div>
-
       <div class="footer">
          <a href="https://www.facebook.com">
             <i class="fa-brands fa-facebook-f"></i>
@@ -210,7 +221,7 @@
             <i class="fa-brands fa-linkedin-in"></i>
          </a>
          <hr>
-
+   
          <p>Copyright &#169;, 2024 TravelTide.</p> 
       </div>
 
