--- a/Listing.html
+++ b/Listing.html
@@ -20,8 +20,8 @@
       
       <ul class="nav-links">
          <li><a href="#" class="active" >Popular Place</a></li>
-         <li><a href="">Travel Outside</a></li>
-         <li><a href="#">Online Packages</a></li>
+         <li><a href="house.html">Travel Outside</a></li>
+         <li><a href="packages.html">Online Packages</a></li>
       </ul>
       <a href="sign-up.html" class="register-btn">Resister Now</a>
       <i class="fa-solid fa-bars" onClick="togglebtn()" ></i>
