--- a/house.html
+++ b/house.html
@@ -21,7 +21,7 @@
       <ul class="nav-links">
          <li><a href="Listing.html" class="active" >Popular Place</a></li>
          <li><a href="house.html">Lakeside Haven</a></li>
-         <li><a href="">Online Packages</a></li>
+         <li><a href="packages.html">Online Packages</a></li>
       </ul>
       <a href="sign-up.html" class="register-btn">Resister Now</a>
       <i class="fa-solid fa-bars" onClick="togglebtn()" ></i>
